[package]
name = "reqwest_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "rustls"] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
